# symbiont

./: .env  .gitignore  CAVEATS.md  Cargo.toml  LICENSE  README.md  TODO.md  devenv.nix  flake.nix  mprocs.yaml  prompt  taplo.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/counter/: Cargo.toml  README.md
examples/counter/src/: main.rs
examples/evolving-trader/: Cargo.toml  README.md
examples/evolving-trader/src/: lib.rs  main.rs
examples/fizzbuzz/: Cargo.toml  README.md
examples/fizzbuzz/src/: main.rs
examples/fractal-studio/: Cargo.toml  README.md
examples/fractal-studio/src/: main.rs
examples/quantize/: Cargo.toml  README.md
examples/quantize/src/: main.rs
examples/rastrigin/: Cargo.toml  README.md
examples/rastrigin/src/: main.rs
examples/sort/: Cargo.toml  README.md
examples/sort/src/: main.rs
examples/struct-support/: Cargo.toml
examples/struct-support/src/: lib.rs  main.rs
examples/tictactoe/: Cargo.toml  README.md
examples/tictactoe/src/: main.rs
examples/tool-calling/: Cargo.toml
examples/tool-calling/src/: main.rs
symbiont/: Cargo.toml
symbiont-lib/: Cargo.toml
symbiont-lib/src/: lib.rs
symbiont-macros/: Cargo.toml
symbiont-macros/src/: evolvable.rs  full_source.rs  lib.rs  utils.rs
symbiont/benches/: dispatch_overhead.rs
symbiont/modules/nixos/: zola-serve.nix
symbiont/src/: compiler.rs  debug_call_counter.rs  decl.rs  doc_string.rs  dylib_config.rs  dylib_dependency.rs  error.rs  evolution_agent.rs  evolve_failure.rs  function_parser.rs  inference.rs  init_tracing.rs  lib.rs  main.rs  observability.rs  panic_preamble.rs  parser.rs  profile.rs  revision.rs  runtime.rs  system_prompt.rs  unwind.rs  update_pointers.rs  utils.rs  validation.rs  writer.rs
symbiont/src/tests/: counter.rs
symbiont/tests/: backpressure_compile.rs  backpressure_context_size.rs  backpressure_fatal.rs  backpressure_forbidden.rs  backpressure_max_retries.rs  backpressure_max_turns.rs  backpressure_panic.rs  backpressure_parse.rs  backpressure_signature.rs  backpressure_signature_modifier.rs  backpressure_transient.rs  backpressure_unsafe.rs  metrics.rs  revisions.rs  runtime.rs
symbiont/tests/common/: mod.rs
website/: README.md  config.toml
website/content/: _index.md
website/public/: style.css  style.css.map
website/sass/: style.scss
website/static/: style.css
website/templates/: index.html
