[package]
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
categories = ["artificial-intelligence"]
description = "Proc macros for symbiont hot-reloadable function declarations."
edition = "2024"
keywords = ["agent", "dylib", "dynamic", "harness", "llm"]
license = "MPL-2.0"
name = "symbiont-macros"
repository = "https://github.com/MathisWellmann/symbiont"
version = "0.3.0"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
