[package]
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
categories = ["artificial-intelligence"]
description = "Agent harness for hot-reloadable function evolution in Rust."
edition = "2024"
exclude = ["modules/"]
keywords = ["agent", "dylib", "dynamic", "harness", "llm"]
license = "MPL-2.0"
name = "symbiont"
readme = "README.md"
repository = "https://github.com/MathisWellmann/symbiont"
version = "0.6.0"

[lints]
workspace = true

[dependencies]
symbiont-macros = { version = "0.6.0", path = "../symbiont-macros" }

rig-core.workspace = true
tokio.workspace = true
tracing.workspace = true

libloading = "0.8"
minstant = "0.1"
owo-colors = "4"
prettyplease = "0.2"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
harness = false
name = "dispatch_overhead"
