[package]
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
categories = ["artificial-intelligence"]
description = "Agent harness for hot-reloadable function evolution in Rust."
edition = "2024"
exclude = ["modules/"]
keywords = ["agent", "dylib", "dynamic", "harness", "llm"]
license = "MPL-2.0"
name = "symbiont"
readme = "README.md"
repository = "https://github.com/MathisWellmann/symbiont"
version.workspace = true
website = "https://symbiont.rs"

[lints]
workspace = true

[dependencies]
symbiont-macros = { version = "0.20.0", path = "../symbiont-macros" }

rig-core.workspace = true
tokio.workspace = true
tracing.workspace = true

getset = "0.1.6"
libloading = "0.9"
metrics = "0.24"
minstant = "0.1"
owo-colors = "4"
prettyplease = "0.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
rustdoc-types = "0.57"
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
http = "1"
metrics-util = { version = "0.20", features = ["debugging"] }
tracing-test = "0.2"

[features]
default = []
# Prometheus exporter for long-running host binaries; pull this in and call
# `symbiont::observability::init_observability()` at startup.
prometheus = ["dep:metrics-exporter-prometheus"]

[dependencies.metrics-exporter-prometheus]
default-features = false
features = ["http-listener"]
optional = true
version = "0.18"

[[bench]]
harness = false
name = "dispatch_overhead"
