[package]
edition = "2024"
license = "MPL-2.0"
name = "quantize-example"
publish = false
version = "0.1.0"

[dependencies]
symbiont = { path = "../../symbiont" }

rig-core.workspace = true
romu.workspace = true
tokio.workspace = true
tracing.workspace = true

derive_more = { version = "2", features = ["full"] }
