[package]
edition = "2024"
license = "MPL-2.0"
name = "quantize-example"
publish = false
version = "0.1.0"

[dependencies]
symbiont = { path = "../../symbiont" }

rig-core.workspace = true
romu.workspace = true
tokio.workspace = true
tracing.workspace = true

derive_more = { version = "2", features = ["full"] }
plotters = { version = "0.3", default-features = false, features = [
  "ttf",
  "bitmap_backend",
  "bitmap_encoder",
  "line_series",
] }
viuer = { version = "0.11", features = ["print-file"] }
colorgrad = { version = "0.8", features = ["preset"] }
