[package]
edition = "2024"
license = "MPL-2.0"
name = "tool-calling-example"
publish = false
version.workspace = true

[lints]
workspace = true

[dependencies]
symbiont = { path = "../../symbiont" }

rig-core.workspace = true
tokio.workspace = true
tracing.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
